# django-app-template

./: .travis.yml  CONTRIBUTING.md  LICENSE  README.md  initial.sh  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
__example_app__/: __init__.py  apps.py
docs/: Makefile
docs/source/: conf.py  index.rst
tests/: apps.py  urls.py
tests/settings/: dev.py  test.py
