[bumpversion]
current_version = 0.0.0
commit = True
commit_args = --no-verify
tag = True

[metadata]
description-file = README.md

[bumpversion:file:setup.cfg]

[bumpversion:file:setup.py]
[bumpversion:file:docs/source/conf.py]

[bumpversion:file:__example_app__/__init__.py]

[bdist_wheel]
universal = 1

[flake8]
ignore = D203
exclude =
	__example_app__/migrations/,
	.git/,
	.tox/,
	docs/,
	build/,
	dist/
max-line-length = 99

[mypy]
python_version = 3.7
warn_return_any = True
warn_unused_configs = True

[mypy-tests.*]
ignore_errors = True

[mypy-__example_app__.*]
disallow_untyped_defs = True
disallow_incomplete_defs = True
disallow_untyped_calls = True
disallow_untyped_decorators = True
